# menelaus

./: .coverage.MM272502-PC.11688.871139  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  PSI Detector.py  README.md  README.rst  __init__.py  install_certs_python.py  mitre-chain.txt  readme_short.rst  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: coverage.yml  examples.yml  format.yml  github_ci.yml  pypi_push.yml  release.yml  tests.yml  update-changelog.yaml
benchmarks/: README.md  bm_example_plot_1.py
distribution/: PCA_CD.py  kdqTreeDetector.py
docs/source/: cdbd_example.ipynb  conf.py  flow_diagram.rst  index.rst  modules.rst  molten.distribution.rst  molten.other.rst  molten.performance.rst  molten.rst  molten.tools.rst  references.rst  refs.bib
docs/source/_static/: custom.css
docs/source/examples/: cdbd_example.ipynb  convert_notebooks.py  data_drift_examples.ipynb  hdddm_example.ipynb  kdqtree_example.ipynb  pca_cd_example.ipynb
docs/source/templates/: package.rst_t
examples/: PCA_CD_new_test.ipynb  Testing_Vignette2.ipynb  change_detection_examples.py  concept_drift_examples.py  data_drift_examples.py  demo copy.ipynb  ensemble_examples.py  kdq_batch_WLS.ipynb  md3_example.py  partitioner_plots_example.py  synthetic_drift_injection_examples.py  wilds_datasets.py
examples/Batch/: CDBD.py  HDDDM.py
examples/Batch/HDDDM/: HDDDM_sensitivity_analysis.ipynb
examples/Batch/KDQTree/: Partitioner_Plots.ipynb  kdq_batch_WLS.ipynb
examples/HDDDM/: HDDDM_sensitivity_analysis.ipynb  HDDDM_visualizations.ipynb
examples/Streaming/: Testing_Vignette2.ipynb  dataCircleGSev3Sp3Train.csv
examples/batch/: CDBD_Example.ipynb  cdbd_example.py  hdddm_example.py  kdqtree_batch_example.py  nndvi_example.py  partitioner_plots_example.py
examples/streaming/: change_detection_example.py  concept_drift_example.py  data_drift_example.py  md3_example.py  test.py
menelaus/: __init__.py  detector.py  drift_detector.py
menelaus/change_detection/: adwin.py  cusum.py  page_hinkley.py
menelaus/concept_drift/: __init__.py  adwin_accuracy.py  ddm.py  eddm.py  lfr.py  md3.py  stepd.py
menelaus/data_drift/: PSI Detector.py  __init__.py  cdbd.py  dl_detector.py  hdddm.py  histogram_density_method.py  kdq_tree.py  nndvi.py  pca_cd.py  psi_detector.py  stat_test.py
menelaus/datasets/: __init__.py  make_example_data.py
menelaus/ensemble/: __init__.py  election.py  ensemble.py
menelaus/experimental/: __init__.py  alarm.py  detector.py  representation.py  transform.py
menelaus/injection/: __init__.py  class_manipulation  class_manipulation.py  feature_manipulation.py  injection_automation.py  injector.py  label_manipulation.py  noise.py
menelaus/nlp/: __init__.py  alarm.py  detector.py  representation.py
menelaus/nlp_experimental/: alarm.py  detector.py  representation.py
menelaus/partitioners/: KDQTreePartitioner.py  NNSpacePartitioner.py  QuantTreePartitioner.py  __init__.py
menelaus/utils/: _locate.py
molten/: DriftDetector.py
molten/distribution/: PCA_CD.py  kdqTreeDetector.py  kl_divergence.py
molten/other/: PageHinkley.py  cusum.py
molten/performance/: ADWIN.py  DDM.py  EDDM.py  STEPD.py
other/: cusum.py
performance/: ADWIN.py  DDM.py  lfr.py
src/mendelaus/: drift_detector.py
src/mendelaus/change_detection/: __init__.py  cusum.py  page_hinkley.py
src/mendelaus/concept_drift/: __init__.py  adwin.py  ddm.py  eddm.py  lfr.py  stepd.py
src/mendelaus/data_drift/: __init__.py  cdbd.py  hdddm.py  histogram_density_method.py  kdq_tree.py  pca_cd.py
src/mendelaus/partitioners/: __init__.py
src/menelaus/: __init__.py  dev.ipynb  drift_detector.py  ensemble.ipynb  ensemble.py
src/menelaus/change_detection/: __init__.py  adwin.py  cusum.py  page_hinkley.py
src/menelaus/concept_drift/: __init__.py  adwin.py  adwin_acc.py  adwin_accuracy.py  adwin_outcome.py  ddm.py  eddm.py  lfr.py  md3.py  stepd.py
src/menelaus/data_drift/: __init__.py  cdbd.py  cdbd_example.ipynb  detectA.py  hdddm.py  kdq_tree.py  test.py  (+3 more)
src/molten/: DriftDetector.py  __init__.py  drift_detector.py
tests/examples/: test_example_notebooks.py  test_example_scripts.py
tests/mendelaus_tests/: .pylintrc  test_adwin.py  test_cdbd.py  test_cusum.py  test_ddm.py  test_drift_detector.py  test_eddm.py  test_hdddm.py  test_histogram_density_method.py  test_kdq_tree.py  test_kdqtree_partitioner.py  test_lfr.py  test_page_hinkley.py  test_pca_cd.py  test_stepd.py
tests/menelaus/: test.ipynb  test_adwin.py  test_cdbd.py  test_ddm.py  test_detector.py  test_drift_detector.py  test_eddm.py  test_ensemble.py  test_example_data.py  test_histogram_density_method.py  test_kdq_tree.py  test_kdqtree_partitioner.py  test_lfr.py  test_md3.py  test_utils.py
tests/menelaus_tests/: test_adwin.py  test_cdbd.py  test_cusum.py  test_drift_detector.py  test_eddm.py  test_example_scripts.py  test_hdddm.py  test_histogram_density_method.py  test_kdq_tree.py  test_kdqtree_partitioner.py  test_lfr.py  test_page_hinkley.py  test_pca_cd.py  test_stepd.py
tests/molten_tests/: test_adwin.py  test_cdbd.py  test_cusum.py  test_ddm.py  test_drift_detector.py  test_eddm.py  test_hdddm.py  test_histogram_density_method.py  test_internal_functions.py  test_kdq_tree.py  test_kdqtree_partitioner.py  test_lfr.py  test_page_hinkley.py  test_pca_cd.py  test_stepd.py
(+97 files in other folders)
