#https://setuptools.pypa.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = menelaus
version = 0.1.1
license = Apache 2.0
description = This library implements algorithms for detecting data drift and concept drift for ML and statistics applications.
long_description = file: readme_short.rst
long_description_content_type = text/x-rst
author = Leigh Nicholl, Thomas Schill, India Lindsay, Anmol Srivastava, Kodie P McNamara, Austin Downing
author_email = tschill@mitre.org
classifiers=
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python
url = https://github.com/mitre/menelaus

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pandas
   numpy >= 1.22.0
   sklearn
   scipy
   joblib

[options.extras_require]
test =
   matplotlib
   seaborn
   plotly
   pytest
   pytest-cov
   coverage
   nbconvert
   jupyter

dev =
   matplotlib
   seaborn
   plotly
   black
   flake8
   pytest
   pytest-cov
   coverage
   sphinx
   sphinx-rtd-theme
   sphinx-autoapi
   sphinxcontrib-bibtex
   sphinxcontrib.mermaid
   myst_parser

format = 
   black
   flake8

[options.packages.find]
where=src

[flake8]
max-line-length = 88
exclude = 
   .git,
   bin,
   docs,
   examples,
   tests
select=E9,F63,F7,F82

[tool:pytest]
testpaths =
   tests/menelaus
addopts = 
   --cov=src/
   --cov-report=term
   --cov-report=html
   --doctest-modules
