#https://setuptools.pypa.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = menelaus
version = 0.2.0
license = Apache 2.0
description = This library implements algorithms for detecting data drift and concept drift for ML and statistics applications.
long_description = file: readme_short.rst
long_description_content_type = text/x-rst
author = Leigh Nicholl, Thomas Schill, India Lindsay, Anmol Srivastava, Kodie P McNamara, Austin Downing
author_email = tschill@mitre.org
classifiers=
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python
url = https://github.com/mitre/menelaus

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   joblib
   numpy >= 1.22.0 # This is due to the call to np.quantile in data_drift.kdq_tree, which uses an updated arg name. The code is otherwise compatible with python >= 3.5.
   pandas
   scipy
   sklearn

[options.extras_require]
test =
   coverage
   jupyter
   matplotlib
   nbconvert
   plotly
   pytest
   pytest-cov
   seaborn

dev =
   black
   coverage
   flake8
   ipykernel
   matplotlib
   myst_parser
   nbsphinx
   plotly
   pypandoc
   pytest
   pytest-cov
   seaborn
   sphinx
   sphinx-autoapi
   sphinxcontrib.mermaid
   sphinxcontrib-bibtex
   sphinx-rtd-theme
   tox


format = 
   bandit
   black
   flake8

[options.packages.find]
where=src

[flake8]
max-line-length = 88
exclude = 
   .git,
   bin,
   docs,
   examples,
   tests
select=E9,F63,F7,F82

[tool:pytest]
testpaths =
   tests/menelaus
addopts = 
   --cov=src/
   --cov-report=term
   --cov-report=html
   --doctest-modules
